# coast_audio

./: .gitignore  .gitmodules  .pubignore  CHANGELOG.md  CoastAudio.podspec  LICENSE  Makefile  README.md  analysis_options.yaml  pubspec.yaml
example/: .gitignore  .metadata  (+3 more)
native/: CMakeLists.txt  Makefile  linux.x86_64.toolchain.cmake
native/prebuilt/apple/coast_audio.xcframework/: Info.plist
native/prebuilt/apple/coast_audio.xcframework/ios-arm64-simulator/coast_audio.framework/: coast_audio
native/prebuilt/apple/coast_audio.xcframework/ios-arm64-simulator/coast_audio.framework/Headers/: ca_log.h
native/prebuilt/apple/coast_audio.xcframework/ios-arm64-simulator/coast_audio.framework/_CodeSignature/: CodeDirectory  CodeRequirements-1  CodeResources
native/prebuilt/apple/coast_audio.xcframework/ios-arm64-simulator/coast_audio_Privacy.bundle/: Info.plist
native/prebuilt/apple/coast_audio.xcframework/ios-arm64/coast_audio.framework/: coast_audio
native/prebuilt/apple/coast_audio.xcframework/ios-arm64/coast_audio.framework/Modules/: module.modulemap
native/prebuilt/apple/coast_audio.xcframework/macos-arm64/coast_audio.framework/: coast_audio
native/prebuilt/apple/coast_audio.xcframework/macos-arm64/coast_audio.framework/Headers/: ca_dart.h  ca_device.h  coast_audio.h
native/prebuilt/apple/coast_audio.xcframework/macos-arm64/coast_audio.framework/Versions/A/: coast_audio
native/prebuilt/linux/aarch64/: libcoast_audio.dylib
native/prebuilt/linux/x86_64/: libcoast_audio.dylib
native/scripts/: android_build.sh  apple_build.sh  linux_build.sh  symbol_keeper.dart
native/src/: SymbolKeeper.swift  ca_context.c  ca_context.h  ca_dart.c  ca_defs.h  ca_device.c  ca_device.h  ca_log.c  coast_audio.c  coast_audio.h  dart_types.h
(+270 files in other folders)
